--- a/MvcMovie/Views/Employee/Index.cshtml
+++ b/MvcMovie/Views/Employee/Index.cshtml
@@ -1,8 +1,10 @@
 <form asp-action="Index">      
     <label>EmployeeID</label>
-    <p></p><input name="EmployeeID" class="w3-input w3-border" type="text"></p>
+    <p><input name="EmployeeID" class="w3-input w3-border" type="text"></p>
     <label>TenNV</label>
-    <p><input name="TenNV" class="w3-input w3-border " type="text">
+    <p><input name="TenNV" class="w3-input w3-border " type="text"></p>
+    <label>Age</label>
+    <p><input name="Age" class="w3-input w3-border " type="text"></p>
     <input class="w3-btn w3-grey w3-border" type ="submit"></p>
 </form>
 <h2>@ViewBag.thongbao</h2>
