--- a/MvcMovie/Views/Person/Index.cshtml
+++ b/MvcMovie/Views/Person/Index.cshtml
@@ -11,6 +11,9 @@
      <thead>
         <tr>
         <th>
+            @Html.DisplayNameFor(model => model.PersonID)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.FullName)
         </th>
         <th>
@@ -29,7 +32,7 @@
                 @Html.DisplayFor(modelItem =>item.FullName)
             </td>
             <td>
-                @Html.DisplayFor(modleItem => item.Address)
+                @Html.DisplayFor(modelItem => item.Address)
             </td>
       <td>
         <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a>
