--- a/MvcMovie/Views/Person/Index.cshtml
+++ b/MvcMovie/Views/Person/Index.cshtml
@@ -1,7 +1,10 @@
 @model IEnumerable<MvcMovie.Models.Person>
+@using X.PagedList;
+@using X.PagedList.Mvc.Core;
+
     @{
         ViewData["Title"] = "Index";
-
+    }
     <h1>Index</h1>
     <p>
         <a asp-action="Create">Create New</a>
@@ -42,4 +45,5 @@
           }
      </tbody>
      </table>
-   }
+      @Html.PagedListPager((IPagedList) Model, page => Url.Action("Index", new {page = page}), new X.PagedList.Mvc.Core.PagedListRenderOptions { LiElementClasses = new string[] {"page-item"}, PageClasses = new string[] { "page-link" }}) 
+      
